azure .net aspire ms mcp server vscode agent = great

--- a/truncate-feature-flag-insights-data/EventsCleanupApi/EventsCleanupApi.csproj
+++ b/truncate-feature-flag-insights-data/EventsCleanupApi/EventsCleanupApi.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <!-- Container publishing settings -->
+    <EnableSdkContainerSupport>true</EnableSdkContainerSupport>
+    <ContainerBaseImage>mcr.microsoft.com/dotnet/aspnet:10.0</ContainerBaseImage>
   </PropertyGroup>
 
   <ItemGroup>
