--- a/truncate-feature-flag-insights-data/AppHost/AppHost.csproj
+++ b/truncate-feature-flag-insights-data/AppHost/AppHost.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspire.Hosting.Azure.AppContainers" Version="13.0.2" />
     <PackageReference Include="Aspire.Hosting.JavaScript" Version="13.0.2" />
   </ItemGroup>
 
